--- a/progress-steps/index.html
+++ b/progress-steps/index.html
@@ -20,6 +20,6 @@
         <button class="btn" id="prev" disabled>Prev</button>
         <button class="btn" id="next">Next</button>
     </div>
-    
+    <script src="/progress-steps/script.js"></script>
 </body>
 </html>
