--- a/expanding-cards/index.html
+++ b/expanding-cards/index.html
@@ -23,6 +23,6 @@
     </div>
     </div>
     
-    <script src="script.js"></script>
+    <script src="/expanding-cards/script.js"></script>
 </body>
 </html>
