--- a/rotating-navigation/index.html
+++ b/rotating-navigation/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/rotating-navigation/style.css" />
+
     <title>Rotating Navigation</title>
 </head>
 <body>
@@ -39,7 +41,7 @@
 
         </ul>
     </nav>
-        <script src="script.js"></script>
+        <script src="/rotating-navigation/script.js"></script>
 
 </body>
 </html>
